--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,9 +57,7 @@
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition:
-    color 0.15s ease,
-    border-color 0.15s ease;
+  transition: color 0.15s ease, border-color 0.15s ease;
 }
 
 .card:hover,
@@ -82,6 +80,18 @@
 
 .logo {
   height: 1em;
+}
+
+.product-card {
+  position: relative;
+  height: 100%;
+  border-radius: 10px;
+  padding: auto;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.offset-middle {
+  margin-top: -30px;
 }
 
 @media (max-width: 600px) {
